[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/RoomBase.gd" type="Script" id=1]

[node name="RoomBase" type="Node2D"]
script = ExtResource( 1 )

[node name="RoomUnderlying" type="Sprite" parent="."]

[node name="RoomOutline-maybe-shader" type="Sprite" parent="."]
visible = false

[node name="RoomHover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomHover"]

[connection signal="mouse_entered" from="RoomHover" to="." method="_show_mouse_outline"]
[connection signal="mouse_exited" from="RoomHover" to="." method="_hide_mouse_outline"]
